# socktile

./: .gitignore  Cargo.toml  LICENCE.md  LICENSE.md  README.md  assets.dev  build_ios_test.sh  build_quick_test.bat  build_quick_test.sh  build_server_test.bat  build_wasm_test.sh  index.html  me.bic  rust-toolchain.toml  test.ldtk  tileset_0.png~
.github/workflows/: rust.yml
assets/: core.ldtk  json.md
assets/lang/: en_us.json  en_us.ljson  tok.ljson
assets/metadata/: audio.json  audio.sjson  languages.bjson  terrain.json  terrain.tjson  transitions.json  transitions.ujson
assets/terrain/heightmaps/: grass.json  grass.vjson  sand.vjson  stone.vjson  water.json  water.vjson
assets/terrain/new/: grass_water_new.vjson
assets/terrain/states/: grass.json
assets/terrain/transitions/: grass_stone.vjson  grass_water.json  grass_water.vjson  sand_grass.vjson  sand_water.vjson  water_sand.vjson
assets/ui/npc_popup/: grow.ajson  shrink.ajson
assets/ui/npc_popup_grow/: config.ajson
assets/world/: project.ldtk
docs/: asset_layout.md  json.md
src/: assets.rs  components.rs  consts.rs  layers.rs  ldtk.rs  ldtk_quicktype.rs  load_maps.rs  main.rs  matrix.rs  modular_assets.rs  prelude.rs  resources.rs  server.rs  shared.rs  systems.rs  utils.rs  window_setup.rs
src/assets/: animated_sprite.rs  audio.rs  language.rs  ldtk.rs  tiles.rs
src/client/: core.rs
src/components/: animator_object.rs  create_user_manager.rs  cursor_marker.rs  game_position.rs  join_choice.rs  join_manager.rs  ldtk.rs  new_manager.rs  play_manager.rs  settings_manager.rs  text_box.rs  title_screen_manager.rs
src/resources/: animator.rs  asset_handles.rs  chat.rs  disk.rs  game_state.rs  last_state.rs  netty.rs  network.rs  reality.rs  setup_manager.rs  text_box.rs  ui.rs
src/resources/animator/: fits.rs  fitsnggs.rs  fitsnwifi.rs  tsb.rs
src/server/: core.rs  globals.rs  handler.rs  npc.rs  saves.rs  tick.rs  world.rs
src/shared/: listing.rs  netty.rs  network.rs  object.rs  player.rs  saves.rs  terrain.rs  world.rs
src/systems/: animator.rs  audio.rs  create_user.rs  cursor.rs  join.rs  loading_screen.rs  netty.rs  new.rs  play.rs  settings.rs  text_box.rs  title_screen.rs  visual.rs
src/systems/audio/: audio_setup.rs  title_screen_loop.rs
src/systems/netty/: startup_checks.rs
src/systems/play/: display_self.rs
src/systems/visual/: animated_sprites.rs  create_world.rs  join_world.rs  load_offline_title_map.rs  load_settings_map.rs  load_title_screen_map.rs  load_user_creation_map.rs  make_user.rs  network_check_display.rs  settings.rs  title_screen.rs  update_title_screen_user.rs
