[package]
name = "socktile"
version = "1.0.0-closed-alpha-00"
edition = "2021"
description = "I don't understand why this is required for iOS"

[package.metadata.bundle]
identifier = "patcatgames.socktile"

[dependencies]
bincode = "1.3.3"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
bevy = { version = "0.9.1", default-features = false, features = ["serialize", "bevy_winit", "render", "png", "x11", "bevy_asset"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
bevy_asset_loader = { version = "0.14.1", git = "https://github.com/NiklasEi/bevy_asset_loader.git", features = ["progress_tracking"] }
bevy_kira_audio = "0.13.0"
bevy_prototype_debug_lines = "0.9.0"
bevy_easings = "0.9.0"
bevy_embedded_assets = "0.6.2"
iyes_progress = "0.7.1"
ldtk_rust = "0.6.0"
anyhow = "1.0.68"
tracing-subscriber = "0.3.16"
tracing-log = "0.1.3"
tracing-wasm = "0.2.1"
tracing = "0.1.37"
rand = "0.8.5"
num = "0.4.0"
console_error_panic_hook = "0.1.7"
netty = { version = "0.1.0", git = "https://github.com/thisjaiden/netty.git", features = ["legacy_threaded"] }
wasm-cookies = "0.2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
panic = "unwind"
lto = "thin"
overflow-checks = false
debug-assertions = false
debug = 0
opt-level = 3
strip = true
