[package]
name = "socktile"
version = "1.0.0-closed-alpha-00"
edition = "2021"
description = "I don't understand why this is required for iOS"

[package.metadata.bundle]
identifier = "patcatgames.socktile"

[dependencies]
bincode = "1.3.3"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
bevy = { version = "0.11.3", default-features = false, features = ["serialize", "bevy_winit", "png", "x11", "bevy_asset", "bevy_text", "webgl2"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
bevy_asset_loader = { version = "0.17.0", features = ["progress_tracking"] }
bevy_kira_audio = "0.17.0"
bevy_prototype_debug_lines = "0.11.1"
bevy_easings = "0.11.1"
bevy_embedded_assets = "0.8.0"
iyes_progress = { version = "0.9.1", features = [ "assets" ]  }
anyhow = "1.0.75"
tracing-subscriber = "0.3.17"
tracing-log = "0.1.3"
tracing = "0.1.37"
rand = "0.8.5"
num = "0.4.1"
netty = { version = "0.1.0", git = "https://github.com/thisjaiden/netty.git", features = ["legacy_threaded"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-cookies = "0.2.1"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"

[workspace]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
panic = "unwind"
lto = "thin"
overflow-checks = false
debug-assertions = false
debug = 0
opt-level = 3
strip = true
